--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,28 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
-  hello: "Hello world"
+
+  layout:
+    title: "Pragmatic Bookshelf"
+    side:
+      home: "Home"
+      questions: "Questions"
+      news: "News"
+      contact: "Contact"
+    cart:
+      title: "Your Cart"
+      button:
+        empty: "Empty cart"
+        checkout: "Checkout"
+
+  main:
+    title: "Your Pragmatic Catalogue"
+    button:
+      add: "Add to Cart"
+
+  number:
+    currency:
+      format:
+        unit: "&pound;"
+        precision: 2
+        separator: "."
+        delimiter: ","
+        format: "%u%n"
